fix: use highest precision number type for mixed type operations